--- a/app/src/main/res/layout/fragment_chat_list_item_me.xml
+++ b/app/src/main/res/layout/fragment_chat_list_item_me.xml
@@ -60,7 +60,9 @@
                 android:id="@+id/image"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
-                app:riv_corner_radius="2dp" />
+                app:riv_corner_radius="2dp"
+                android:scaleType="centerCrop"
+                />
 
             <ImageView
                 android:id="@+id/cinema_icon"
