--- a/app/src/main/res/layout/fragment_chat_list_item_date_header.xml
+++ b/app/src/main/res/layout/fragment_chat_list_item_date_header.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <TextView
-        android:id="@+id/text_date"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:textColor="@color/fifty_white"
-        android:gravity="center_horizontal"
-        />
-</LinearLayout>
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/text_date"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center_horizontal"
+    android:textColor="@color/fifty_white"
+    android:padding="12dp"
+    android:textSize="16sp"
+    android:textAllCaps="true"
+    />
