--- a/app/src/main/res/layout/fragment_chat_list_item_you.xml
+++ b/app/src/main/res/layout/fragment_chat_list_item_you.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/swipe_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_alignParentStart="true"
@@ -10,23 +9,23 @@
     android:layout_marginEnd="48dp"
     android:layout_marginStart="12dp"
     android:layout_marginTop="4dp"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     >
 
     <LinearLayout
-        android:id="@+id/bottom_view"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent">
+        android:layout_width="100dp"
+        android:layout_height="match_parent"
+        android:layout_marginStart="-100dp"
+        android:padding="12dp"
+        >
 
         <TextView
             android:id="@+id/chat_user_time"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="start|center_vertical"
+            android:layout_gravity="end|center_vertical"
+            android:gravity="end|center_vertical"
             android:layout_marginStart="4dp"
-            android:layout_marginEnd="4dp"
-            android:layout_marginTop="4dp"
-            android:padding="12dp"
             android:textColor="@color/seperator_color"
             android:textSize="@dimen/sub_font_size"
             tools:text="3:00AM" />
@@ -75,4 +74,4 @@
     </FrameLayout>
 
 
-</com.daimajia.swipe.SwipeLayout>
+</LinearLayout>
