--- a/app/src/main/res/layout/fragment_chat_list_item_me.xml
+++ b/app/src/main/res/layout/fragment_chat_list_item_me.xml
@@ -1,37 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<com.daimajia.swipe.SwipeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/swipe_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="end"
     android:layout_marginBottom="4dp"
     android:layout_marginEnd="12dp"
     android:layout_marginStart="48dp"
     android:layout_marginTop="4dp"
-    android:orientation="vertical">
+    android:orientation="horizontal"
+    android:clipChildren="false"
+    >
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:gravity="center_vertical"
+        android:layout_width="150dp"
+        android:layout_height="match_parent"
         android:padding="12dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginStart="4dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/chat_user_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/seperator_color"
-            android:textSize="@dimen/sub_font_size"
-            android:gravity="center_vertical"
-            tools:text="3:00AM" />
+        android:layout_marginStart="-186dp"
+        android:gravity="center_vertical|end"
+        >
 
         <ImageView
             android:id="@+id/message_action_icon"
@@ -39,15 +28,24 @@
             android:layout_height="match_parent"
             android:layout_marginEnd="4dp"
             android:layout_marginStart="2dp"
-            android:gravity="center_vertical"
+            android:gravity="end|center_vertical"
             android:src="@drawable/delivered_chat" />
+
+        <TextView
+            android:id="@+id/chat_user_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/seperator_color"
+            android:textSize="@dimen/sub_font_size"
+            android:gravity="center_vertical|end"
+            tools:text="3:00AM" />
 
     </LinearLayout>
 
     <!-- SurfaceView -->
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <com.linute.linute.UtilsAndHelpers.SquareFrameLayout
             android:id="@+id/frame"
@@ -87,5 +85,5 @@
 
     </FrameLayout>
 
-</com.daimajia.swipe.SwipeLayout>
+</LinearLayout>
 
