--- a/app/src/main/res/layout/fragment_chat_list_item_you.xml
+++ b/app/src/main/res/layout/fragment_chat_list_item_you.xml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_alignParentStart="true"
     android:layout_marginBottom="4dp"
     android:layout_marginEnd="48dp"
     android:layout_marginStart="12dp"
     android:layout_marginTop="4dp"
     android:orientation="horizontal"
+    android:clipChildren="true"
     >
 
     <LinearLayout
-        android:layout_width="100dp"
+        android:layout_width="150dp"
         android:layout_height="match_parent"
-        android:layout_marginStart="-100dp"
+        android:layout_marginStart="-150dp"
+        android:gravity="center_vertical|end"
         android:padding="12dp"
         >
 
@@ -23,7 +26,6 @@
             android:id="@+id/chat_user_time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="end|center_vertical"
             android:gravity="end|center_vertical"
             android:layout_marginStart="4dp"
             android:textColor="@color/seperator_color"
@@ -33,7 +35,7 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <com.linute.linute.UtilsAndHelpers.SquareFrameLayout
             android:id="@+id/frame"
