--- a/app/src/main/res/layout/fragment_chat_list_item_me.xml
+++ b/app/src/main/res/layout/fragment_chat_list_item_me.xml
@@ -24,10 +24,11 @@
 
         <ImageView
             android:id="@+id/message_action_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
             android:layout_marginEnd="4dp"
             android:layout_marginStart="2dp"
+            android:scaleType="centerInside"
             android:gravity="end|center_vertical"
             android:src="@drawable/delivered_chat" />
 
