--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -1,34 +1,60 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="#2b3139"
-    >
+    android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar android:id="@+id/chat_fragment_toolbar"
-                                       android:layout_width="match_parent"
-                                       android:layout_height="wrap_content"
-                                       android:background="@color/colorPrimary"
-                                       android:elevation="4dp"
-                                       android:theme="@style/ThemeOverlay.AppCompat.Dark"
-    />
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/chat_fragment_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark" />
 
+    <!-- RecyclerView needs to be in FrameLayout to contain the destructive power of clipChildren=false-->
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/message_container"
+        android:layout_below="@+id/top_date_header"
+        android:clipChildren="false">
 
-    <LinearLayout android:id="@+id/message_container"
-                  android:layout_width="match_parent"
-                  android:layout_height="48dp"
-                  android:layout_alignParentBottom="true"
-                  android:background="@color/pure_white">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/chat_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipChildren="false"
+            android:scrollbarStyle="outsideOverlay"
+            android:scrollbars="vertical" />
+    </FrameLayout>
 
+    <include
+        android:id="@+id/top_date_header"
+        layout="@layout/fragment_chat_list_item_date_header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/chat_fragment_toolbar"
+        android:text="Today"
+        android:visibility="gone"
 
-        <ImageView android:id="@+id/attach"
-                   android:layout_width="40dp"
-                   android:layout_height="40dp"
-                   android:padding="4dp"
-                   android:layout_gravity="center_vertical"
-                   android:src="@drawable/ic_upload_picture"
         />
+
+    <LinearLayout
+        android:id="@id/message_container"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/pure_white">
+
+
+        <ImageView
+            android:id="@+id/attach"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical"
+            android:padding="4dp"
+            android:src="@drawable/ic_upload_picture" />
 
         <EditText
             android:id="@+id/message_input"
@@ -42,63 +68,41 @@
             android:paddingBottom="12dp"
             android:paddingTop="12dp"
             android:singleLine="false"
-            android:textSize="@dimen/body_font_size"
-        />
+            android:textSize="@dimen/body_font_size" />
 
-        <ImageView android:id="@+id/send_button"
-                   android:layout_width="56dp"
-                   android:layout_height="48dp"
-                   android:layout_gravity="bottom|end"
-                   android:alpha="0.25"
-                   android:background="?attr/selectableItemBackground"
-                   android:paddingStart="12dp"
-                   android:paddingEnd="12dp"
-                   android:paddingTop="8dp"
-                   android:paddingBottom="8dp"
-                   android:scaleType="fitCenter"
-                   android:src="@drawable/icon_send"
-        />
+        <ImageView
+            android:id="@+id/send_button"
+            android:layout_width="56dp"
+            android:layout_height="48dp"
+            android:layout_gravity="bottom|end"
+            android:alpha="0.25"
+            android:background="?attr/selectableItemBackground"
+            android:paddingBottom="8dp"
+            android:paddingEnd="12dp"
+            android:paddingStart="12dp"
+            android:paddingTop="8dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/icon_send" />
 
     </LinearLayout>
 
 
-
-    <include layout="@layout/fragment_chat_list_item_date_header"
-        android:id="@+id/top_date_header"
+    <TextView
+        android:id="@+id/empty_view_messanger"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:visibility="gone"
-        android:layout_below="@+id/chat_fragment_toolbar"
-        android:text="Today"
-        />
+        android:layout_centerInParent="true"
+        android:text="No message history."
+        android:textColor="@color/pure_white"
+        android:visibility="gone" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/chat_list"
-        android:layout_width="match_parent"
+    <ProgressBar
+        android:id="@+id/chat_load_progress"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@id/message_container"
-        android:scrollbarStyle="outsideOverlay"
-        android:scrollbars="vertical"
-        android:layout_below="@+id/top_date_header"
-        android:clipChildren="false"
-        />
-
-
-    <TextView android:id="@+id/empty_view_messanger"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:layout_centerInParent="true"
-              android:text="No message history."
-              android:textColor="@color/pure_white"
-              android:visibility="gone"/>
-
-    <ProgressBar android:id="@+id/chat_load_progress"
-                 style="?android:attr/progressBarStyleLarge"
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:layout_centerInParent="true"
-                 android:visibility="gone"
-    />
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
 
 
 </RelativeLayout>
