--- a/app/src/main/res/menu/people_fragment_menu.xml
+++ b/app/src/main/res/menu/people_fragment_menu.xml
@@ -18,4 +18,11 @@
         android:orderInCategory="100"
         android:title="Chat"
         app:showAsAction="always"/>
+
+    <item android:id="@+id/menu_updates"
+        app:actionLayout="@layout/toolbar_updates_icon"
+        android:orderInCategory="101"
+        android:title="Updates"
+        android:icon="@drawable/ic_action_turn20"
+        app:showAsAction="always"/>
 </menu>
