--- a/app/src/main/res/menu/my_profile_action_bar.xml
+++ b/app/src/main/res/menu/my_profile_action_bar.xml
@@ -3,12 +3,12 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-    <item android:id="@+id/add_friend"
-          android:orderInCategory="1"
-          android:title="Find friends"
-          android:icon="@drawable/ic_action_add"
-          app:showAsAction="always"
-    />
+    <!--<item android:id="@+id/add_friend"-->
+          <!--android:orderInCategory="1"-->
+          <!--android:title="Find friends"-->
+          <!--android:icon="@drawable/ic_action_add"-->
+          <!--app:showAsAction="always"-->
+    <!--/>-->
     <item android:id="@+id/settings"
           android:orderInCategory="1"
           android:title="Settings"
