--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -1,39 +1,134 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/pure_black">
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
+    android:focusableInTouchMode="true">
+
+    <!--<FrameLayout-->
+        <!--android:id="@+id/frame"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:focusableInTouchMode="true">-->
+
+        <!--<com.linute.linute.UtilsAndHelpers.MinimumWidthImageView-->
+            <!--android:id="@+id/photo"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:adjustViewBounds="true"-->
+            <!--android:background="@color/pure_black"-->
+            <!--android:scaleType="fitCenter"/>-->
+
+        <!--<com.linute.linute.UtilsAndHelpers.CustomBackPressedEditText-->
+            <!--android:id="@+id/title_text"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="160dp"-->
+            <!--android:background="#96000000"-->
+            <!--android:gravity="center"-->
+            <!--android:imeOptions="actionDone"-->
+            <!--android:inputType="textCapSentences"-->
+            <!--android:lines="1"-->
+            <!--android:paddingBottom="8dp"-->
+            <!--android:paddingTop="8dp"-->
+            <!--android:textColor="@android:color/white"-->
+            <!--android:textSize="14sp"-->
+            <!--android:visibility="gone"-->
+        <!--/>-->
+        <!---->
+    <!--</FrameLayout>-->
+
+    <!--<FrameLayout android:id="@+id/top"-->
+                 <!--android:layout_width="match_parent"-->
+                 <!--android:layout_height="?android:attr/actionBarSize">-->
+
+        <!--<com.linute.linute.UtilsAndHelpers.SquareFrameLayout-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_gravity="center_vertical|end"-->
+            <!--android:layout_marginEnd="16dp">-->
+
+            <!--<ImageButton-->
+                <!--android:id="@+id/save_photo"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:background="@android:color/transparent"-->
+                <!--android:foreground="?selectableItemBackgroundBorderless"-->
+                <!--android:src="@drawable/ic_action_check83"/>-->
+
+            <!--<ProgressBar-->
+                <!--android:id="@+id/editFragment_progress_bar"-->
+                <!--style="?android:attr/progressBarStyleSmall"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_gravity="center"-->
+                <!--android:visibility="gone"/>-->
+
+        <!--</com.linute.linute.UtilsAndHelpers.SquareFrameLayout>-->
+    <!--</FrameLayout>-->
+
+    <!--<FrameLayout-->
+        <!--android:id="@+id/bottom"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="bottom">-->
 
 
+        <!--<LinearLayout-->
+            <!--android:id="@+id/comments"-->
+            <!--android:layout_width="120dp"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_marginBottom="@dimen/activity_horizontal_margin"-->
+            <!--android:orientation="vertical">-->
 
-    <com.lyft.android.scissors.CropView
-        android:id="@+id/crop_view_scis"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:cropviewViewportHeightRatio="1"
-    />
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_gravity="center_horizontal"-->
+                <!--android:gravity="center"-->
+                <!--android:text="anon\ncomments"-->
+                <!--android:textColor="@color/pure_white"-->
+                <!--android:textSize="12sp"-->
+            <!--/>-->
 
+            <!--<CheckBox-->
+                <!--android:id="@+id/anon_comments"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_gravity="center_horizontal"-->
+                <!--android:button="@drawable/turn_anon_comments_off"-->
+                <!--android:checked="true"-->
+            <!--/>-->
 
-    <FrameLayout android:id="@+id/tool_bar_container"
-                    android:layout_width="match_parent"
-                    android:layout_height="?android:attr/actionBarSize">
+        <!--</LinearLayout>-->
 
-        <android.support.v7.widget.Toolbar android:id="@+id/crop_image_toolbar"
-                                           android:layout_width="match_parent"
-                                           android:layout_height="?android:attr/actionBarSize"
-                                           android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
+        <!--<LinearLayout-->
+            <!--android:id="@+id/anon"-->
+            <!--android:layout_width="120dp"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_gravity="end"-->
+            <!--android:layout_marginBottom="@dimen/activity_horizontal_margin"-->
+            <!--android:orientation="vertical">-->
 
-        <ImageButton
-            android:id="@+id/save_photo"
-            android:layout_width="?android:attr/actionBarSize"
-            android:layout_height="?android:attr/actionBarSize"
-            android:layout_gravity="end"
-            android:layout_marginEnd="16dp"
-            android:background="@android:color/transparent"
-            android:foreground="?selectableItemBackgroundBorderless"
-            android:rotation="180"
-            android:src="@drawable/ic_action_navigation_arrow_back_inverted"/>
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_gravity="center_horizontal"-->
+                <!--android:gravity="center"-->
+                <!--android:text="post\nas"-->
+                <!--android:textColor="@color/pure_white"-->
+                <!--android:textSize="12sp"-->
+            <!--/>-->
 
-    </FrameLayout>
-
+            <!--<CheckBox-->
+                <!--android:id="@+id/editFragment_switch"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_gravity="center_horizontal"-->
+                <!--android:button="@drawable/post_as_anon_checkbox"-->
+            <!--/>-->
+        <!--</LinearLayout>-->
+    <!--</FrameLayout>-->
 </FrameLayout>
+
