--- a/app/src/main/res/layout/fragment_rooms.xml
+++ b/app/src/main/res/layout/fragment_rooms.xml
@@ -42,6 +42,7 @@
                                                         android:layout_alignParentBottom="true"
                                                         android:layout_alignParentEnd="true"
                                                         android:layout_margin="@dimen/fab_margin"
-                                                        android:src="@drawable/ic_action_new_message"
+                                                        android:scaleType="center"
+                                                        android:src="@drawable/ic_pencil41"
     />
 </RelativeLayout>
