--- a/app/src/main/res/layout/squarecamera__fragment_edit_save_photo.xml
+++ b/app/src/main/res/layout/squarecamera__fragment_edit_save_photo.xml
@@ -1,30 +1,32 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:focusableInTouchMode="true">
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
+    android:focusableInTouchMode="true">
 
+    <FrameLayout
+        android:id="@+id/frame"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:focusableInTouchMode="true">
 
-    <FrameLayout android:id="@+id/frame"
-                 android:layout_width="match_parent"
-                 android:layout_height="match_parent"
-                 android:focusableInTouchMode="true">
-
-        <ImageView
+        <com.linute.linute.UtilsAndHelpers.MinimumWidthImageView
             android:id="@+id/photo"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
             android:background="@color/pure_black"
             android:scaleType="fitCenter"/>
 
-        <com.linute.linute.UtilsAndHelpers.CustomBackPressedEditText
-            android:id="@+id/editFragment_title_text"
+        <com.linute.linute.UtilsAndHelpers.NoSuggestionsTextView
+            android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="160dp"
+            android:layout_marginTop="120dp"
             android:background="#96000000"
             android:gravity="center"
-            android:imeOptions="actionDone"
-            android:inputType="textCapSentences"
             android:lines="1"
             android:paddingBottom="8dp"
             android:paddingTop="8dp"
@@ -34,9 +36,28 @@
         />
     </FrameLayout>
 
-    <FrameLayout android:id="@+id/top"
-                 android:layout_width="match_parent"
-                 android:layout_height="?android:attr/actionBarSize">
+
+    <com.linute.linute.UtilsAndHelpers.CustomBackPressedEditText
+        android:id="@+id/editFragment_title_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="120dp"
+        android:background="#96000000"
+        android:gravity="center"
+        android:imeOptions="actionDone"
+        android:inputType="textCapSentences"
+        android:lines="1"
+        android:paddingBottom="8dp"
+        android:paddingTop="8dp"
+        android:textColor="@android:color/white"
+        android:textSize="14sp"
+        android:visibility="gone"
+    />
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/top"
+        android:layout_width="match_parent"
+        android:layout_height="?android:attr/actionBarSize">
 
         <com.linute.linute.UtilsAndHelpers.SquareFrameLayout
             android:layout_width="wrap_content"
@@ -61,60 +82,67 @@
                 android:visibility="gone"/>
 
         </com.linute.linute.UtilsAndHelpers.SquareFrameLayout>
-    </FrameLayout>
+    </android.support.v7.widget.Toolbar>
 
-    <FrameLayout android:id="@+id/bottom"
-                 android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 android:layout_gravity="bottom">
+    <FrameLayout
+        android:id="@+id/bottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom">
 
 
-        <LinearLayout android:id="@+id/comments"
-                      android:layout_width="120dp"
-                      android:layout_height="match_parent"
-                      android:layout_marginBottom="@dimen/activity_horizontal_margin"
-                      android:orientation="vertical">
+        <LinearLayout
+            android:id="@+id/comments"
+            android:layout_width="120dp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/activity_horizontal_margin"
+            android:orientation="vertical">
 
-            <TextView android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:layout_gravity="center_horizontal"
-                      android:gravity="center"
-                      android:text="anon\ncomments"
-                      android:textColor="@color/pure_white"
-                      android:textSize="12sp"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center"
+                android:text="anon\ncomments"
+                android:textColor="@color/pure_white"
+                android:textSize="12sp"
             />
 
-            <CheckBox android:id="@+id/anon_comments"
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:layout_gravity="center_horizontal"
-                      android:button="@drawable/turn_anon_comments_off"
-                      android:checked="true"
+            <CheckBox
+                android:id="@+id/anon_comments"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:button="@drawable/turn_anon_comments_off"
+                android:checked="true"
             />
 
         </LinearLayout>
 
-        <LinearLayout android:id="@+id/anon"
-                      android:layout_width="120dp"
-                      android:layout_height="match_parent"
-                      android:layout_gravity="end"
-                      android:layout_marginBottom="@dimen/activity_horizontal_margin"
-                      android:orientation="vertical">
+        <LinearLayout
+            android:id="@+id/anon"
+            android:layout_width="120dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="end"
+            android:layout_marginBottom="@dimen/activity_horizontal_margin"
+            android:orientation="vertical">
 
-            <TextView android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:layout_gravity="center_horizontal"
-                      android:gravity="center"
-                      android:text="post\nas"
-                      android:textColor="@color/pure_white"
-                      android:textSize="12sp"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center"
+                android:text="post\nas"
+                android:textColor="@color/pure_white"
+                android:textSize="12sp"
             />
 
-            <CheckBox android:id="@+id/editFragment_switch"
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:layout_gravity="center_horizontal"
-                      android:button="@drawable/post_as_anon_checkbox"
+            <CheckBox
+                android:id="@+id/editFragment_switch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:button="@drawable/post_as_anon_checkbox"
             />
         </LinearLayout>
     </FrameLayout>
