--- a/app/src/main/res/layout/trending_footer.xml
+++ b/app/src/main/res/layout/trending_footer.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="64dp"
-             android:background="?android:attr/selectableItemBackground">
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="64dp"
+    android:background="?android:attr/selectableItemBackground">
 
-    <TextView android:id="@+id/textView"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:layout_gravity="center"
-              android:layout_marginEnd="64dp"
-              android:layout_marginStart="64dp"
-              android:gravity="center"
-              android:text="ERROR LOADING"
-              android:textColor="@color/pure_white"
-              android:textSize="@dimen/header_font_size"
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginEnd="64dp"
+        android:layout_marginStart="64dp"
+        android:gravity="center"
+        android:text="ERROR LOADING"
+        android:textColor="@color/pure_white"
+        android:textSize="@dimen/header_font_size"
     />
 
     <ProgressBar
